--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
     <title>Resume - Start Bootstrap Theme</title>
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
     <!-- Google fonts-->
@@ -25,8 +25,8 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
         <a class="navbar-brand js-scroll-trigger" href="#page-top">
             <span class="d-block d-lg-none">Gunjan Hirani</span>
-            <!-- <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2"
-                    src="assets/img/profile.jpg" alt="..." /></span> -->
+            <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2"
+                    src="assets/img/signature.jpeg" alt="..." /></span>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
             aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span
@@ -41,6 +41,7 @@
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#signature">Signature</a></li>
 
             </ul>
         </div>
@@ -285,7 +286,19 @@
             </div>
         </section>
         
-
+        <!-- Signature -->
+<section class="resume-section" id="signature">
+    <div class="resume-section-content">
+      <h2 class="section-title mb-5">Signature</h2>
+      <p style="font-family: 'Saira Extra Condensed', sans-serif; font-size: 20px;">
+        Thank you for visiting my portfolio. Here's my personal signature.
+      </p>
+      <div class="signature-image">
+        <img src="assets/img/signature.jpg" alt="Gunjan Hirani Signature" style="max-width: 300px; height: auto; border: 1px solid #ccc; padding: 10px; border-radius: 10px;">
+      </div>
+    </div>
+  </section>
+  
 
     </div>
     <!-- Bootstrap core JS-->
