--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
     <!-- Page Content-->
     <div class="container-fluid p-0">
         <!-- About-->
+
+
+        
         <section class="resume-section" id="about">
             <div class="resume-section-content">
                 <h1 class="mb-0">
@@ -294,7 +297,7 @@
         Thank you for visiting my portfolio. Here's my personal signature.
       </p>
       <div class="signature-image">
-        <img src="assets/img/signature.jpg" alt="Gunjan Hirani Signature" style="max-width: 300px; height: auto; border: 1px solid #ccc; padding: 10px; border-radius: 10px;">
+        <img src="signature.jpg" alt="Gunjan Hirani Signature" style="max-width: 300px; height: auto; border: 1px solid #ccc; padding: 10px; border-radius: 10px;">
       </div>
     </div>
   </section>
