--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <a class="navbar-brand js-scroll-trigger" href="#page-top">
             <span class="d-block d-lg-none">Gunjan Hirani</span>
             <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2"
-                    src="assets/img/signature.jpeg" alt="..." /></span>
+                    src="assets/img/ss_min_tie.png" alt="..." /></span>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
             aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span
@@ -49,9 +49,6 @@
     <!-- Page Content-->
     <div class="container-fluid p-0">
         <!-- About-->
-
-
-        
         <section class="resume-section" id="about">
             <div class="resume-section-content">
                 <h1 class="mb-0">
@@ -297,7 +294,7 @@
         Thank you for visiting my portfolio. Here's my personal signature.
       </p>
       <div class="signature-image">
-        <img src="signature.jpg" alt="Gunjan Hirani Signature" style="max-width: 300px; height: auto; border: 1px solid #ccc; padding: 10px; border-radius: 10px;">
+        <img src="assets/img/signature.jpeg" alt="Gunjan Hirani Signature" style="max-width: 300px; height: auto; border: 1px solid #ccc; padding: 10px; border-radius: 10px;">
       </div>
     </div>
   </section>
