--- a/index.html
+++ b/index.html
@@ -289,24 +289,29 @@
         <!-- Signature -->
 <!-- Signature -->
 <section class="resume-section" id="signature">
-  <div class="resume-section-content text-center">
-    <h2 class="section-title mb-4">Signature</h2>
-    <p style="font-family: 'Saira Extra Condensed', sans-serif; font-size: 22px;">
-      Thank you for visiting my portfolio. Here's my personal signature.
-    </p>
-    <img src="signature.jpeg" alt="Gunjan Hirani Signature"
-         style="
-           width: 90%;              /* Responsive width */
-           max-width: 600px;        /* Prevent it from being too large */
-           height: auto;
-           margin-top: 20px;
-           border: 2px solid #ccc;
-           padding: 10px;
-           border-radius: 12px;
-           box-shadow: 0 8px 24px rgba(0, 0, 0, 0.1);
-         ">
-  </div>
-</section>
+    <div class="resume-section-content text-center">
+      <h2 class="section-title mb-4">Signature</h2>
+      <p style="font-family: 'Saira Extra Condensed', sans-serif; font-size: 22px;">
+        Thank you for visiting my portfolio. Here's my personal signature.
+      </p>
+      <img src="signature.jpeg" alt="Gunjan Hirani Signature"
+      style="
+        width: 100%;
+        max-width: 900px;     /* Increase max width for desktop */
+        height: auto;
+        margin-top: 25px;
+        border: 2px solid #ccc;
+        padding: 12px;
+        border-radius: 14px;
+        box-shadow: 0 12px 30px rgba(0, 0, 0, 0.15);
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+      ">
+ 
+    </div>
+  </section>
+  
 
   
 
